# rocket-pastebin

./: Cargo.toml  README.md
src/: main.rs  paste_id.rs
templates/: edit.html.hbs  index.html.hbs
