# Copyright © 2016 Bart Massey
# [This program is licensed under the "MIT License"]
# Please see the file COPYING in the source
# distribution of this software for license terms.

[package]
name = "rocket-pastebin"
version = "0.1.0"
authors = ["Bart Massey <bart@cs.pdx.edu>"]

[[bin]]
name = "pastebin"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]

[dependencies]
rocket = "0.1.1"
rocket_codegen = "0.1.1"
rand = "0.3"
serde = "0.8"
serde_derive = "0.8"
